--- a/worldgen/client.html
+++ b/worldgen/client.html
@@ -6,7 +6,7 @@
   <body>
     <a-scene>
     <a-plane rotation="-90 0 0"></a-plane>
-      <a-sky src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg"></a-sky>
+      <a-sky src="https://iili.io/HnL7QyP.png"></a-sky>
     </a-scene>
   </body>
 </html>
