--- a/worldgen/client.html
+++ b/worldgen/client.html
@@ -6,7 +6,7 @@
   <body>
     <a-scene>
     <a-plane rotation="-90 0 0"></a-plane>
-      <a-sky src="https://iili.io/HnLr7bS.png"></a-sky>
+      <a-sky src="https://iili.io/HnL4R4a.png"></a-sky>
     </a-scene>
   </body>
 </html>
