--- a/client/index.html
+++ b/client/index.html
@@ -16,10 +16,23 @@
             <a-cursor intersection-spawn="event: click; mixin: voxel"></a-cursor>
         </a-camera>
         
-        <a-icosahedron static-body class="target" color="red" radius="1" position="-2 3 -5"></a-icosahedron>    
-        <a-icosahedron static-body class="target" color="white" radius="1" position="2 3 -5"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="blue" radius="1" position="3 -7 10"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="green" radius="1" position="-5 4 -6"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="yellow" radius="1" position="1 -2 -8"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="red" radius="1" position="-9 1 -2"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="pink" radius="1" position="7 -5 6"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="orange" radius="1" position="2 -3 4"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="purple" radius="1" position="-4 -7 1"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="blue" radius="1" position="6 3 -2"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="green" radius="1" position="8 -4 -3"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="yellow" radius="1" position="-6 -9 7"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="red" radius="1" position="9 -2 -5"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="pink" radius="1" position="-3 6 4"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="orange" radius="1" position="5 -1 -7"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="purple" radius="1" position="-7 8 9"></a-icosahedron>
+        <a-icosahedron static-body class="target" color="blue" radius="1" position="4 -6 -1"></a-icosahedron>
     
-    <a-sky src="assets/1.png"></a-sky>      
+    <a-sky src="assets/0.png"></a-sky>      
     </a-scene>
   </body>
   <script src="https://codechangers.com/camps2019/vr/shoot-partial.js"></script>
